--- a/build.xml
+++ b/build.xml
@@ -16,13 +16,16 @@
 <mkdir dir="${build.dir}" />
 <mkdir dir="${dist.dir}" />
 </target>
+
+<!-- Compiles the java code (including usage of Library for Junit) -->
 <target name="compile" depends="clean, makedir">
 <javac srcdir="${src.dir}" destdir="${build.dir}">
 <classpath refid="class.path" />
 </javac>
 </target>
+<!-- Create the deployable jar file -->
 <target name="jar" depends="compile">
-<jar destfile="${dist.dir}\rectangle_${env.BUILD_NUMBER}.jar" basedir="${build.dir}">
+<jar destfile="${dist.dir}\rectangle_${env.MAJOR_VERSION}.${env.BUILD_NUMBER}.jar" basedir="${build.dir}">
 <manifest>
 <attribute name="Main-Class" value="Rectangulator" />
 </manifest>
